# Labs_OOP_5

./: .gitignore  CMakeLists.txt
include/: CustomAllocator.h  DynamicArray.h
src/: CustomAllocator.cpp  main.cpp
tests/: tests.cpp
